home component accordian work

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,13 +37,7 @@
     <StackLayout class="p-20" col="0" row="1">
         <Accordion height="100%" [items]="items" allowMultiple="false" [selectedIndexes]="selectedIndexes">
     
-            <ng-template let-i="index" let-item="item" acTemplateKey="header">
-                <StackLayout>
-                    <Label backgroundColor="green" [text]="item.headerText"></Label>
-                </StackLayout>
-            </ng-template>
-    
-    
+
             <ng-template let-i="index" let-item="item" acTemplateKey="title">
                 <GridLayout backgroundColor="white">
                     <Label [text]="item.title"></Label>
@@ -52,17 +46,10 @@
     
             <ng-template let-i="index" let-item="item" acTemplateKey="content">
                 <StackLayout>
-                    <Image width="300" height="20" decodeWidth="400" decodeHeight="400" [src]="item.image"></Image>
-                    <Label [text]="item.text"></Label>
+                    <Label [text]="item.text" (tap)="meetingTap(item.text)"></Label>
                 </StackLayout>
             </ng-template>
-    
-    
-            <ng-template let-i="index" let-item="item" acTemplateKey="footer">
-                <StackLayout>
-                    <Label backgroundColor="yellow" [text]="item.footerText"></Label>
-                </StackLayout>
-            </ng-template>
+
         </Accordion>
     </StackLayout>
 
