--- a/App_Resources/Android/src/main/res/values/nativescript_google_maps_api.xml
+++ b/App_Resources/Android/src/main/res/values/nativescript_google_maps_api.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="nativescript_google_maps_api_key">AIzaSyBUmB5-8_Uvm3Ai7GIuoEzi9CZzasDbVKY</string>
+    <!-- <string name="nativescript_google_maps_api_key">AIzaSyBUmB5-8_Uvm3Ai7GIuoEzi9CZzasDbVKY</string> -->
+    <string name="nativescript_google_maps_api_key">AIzaSyAtRVvG3Be3xXiZFR7xp-K-9hy4nZ4hMFs</string>
 </resources>
