--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,6 +1,9 @@
-<TabView selectedIndex="2" androidTabsPosition="bottom">
+<TabView selectedIndex="3" androidTabsPosition="bottom">
 
     <page-router-outlet *tabItem="{title: 'Map'}" name="mapTab" actionBarVisibility="never">
+    </page-router-outlet>
+
+    <page-router-outlet *tabItem="{title: 'ToolKit'}" name="toolkitTab" actionBarVisibility="never">
     </page-router-outlet>
 
     <page-router-outlet *tabItem="{title: 'Alert'}" name="alertTab" actionBarVisibility="never">
