--- a/src/app/bigbook/bigbook.component.html
+++ b/src/app/bigbook/bigbook.component.html
@@ -1,1 +1,14 @@
-<Button text="bigbook works!" class="btn btn-primary"></Button>
+<ActionBar class="action-bar">
+    <Label class="action-bar-title" text="AA Big Book"></Label>
+</ActionBar>
+
+<GridLayout class="page page-content">
+    <ListView [items]="items" rowHeight="45" class="list-group">
+        <ng-template let-item="item">
+            <GridLayout class="toolkit-panel" rows="*" columns="auto, *">
+                <Image row="0" col="0" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" class="thumb img-circle"></Image>
+                <Label row="0" col="1" [nsRouterLink]="['../item', item.id]" [text]="item.name" class="bigbooklabel"></Label>
+            </GridLayout>
+        </ng-template>
+    </ListView>
+</GridLayout>
